<resources>
    <string name="app_name">Room Example</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alta_de_empleados">Alta de Empleados</string>
    <string name="departamento">Departamento</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="actualizar_empleado">Actualizar Empleado</string>
    <string name="eliminar">Eliminar</string>
</resources>